--- a/main/index.html/style.css
+++ b/main/index.html/style.css
@@ -12,7 +12,7 @@ h1 {
     font-size: 3rem;
     opacity: 0.8;
     border: 0 0 0 8px;
-    /*change this in order to improve its functionality.*/
+    /*ups*/
 }
 
 main {
