--- a/main/index.html/style.css
+++ b/main/index.html/style.css
@@ -3,17 +3,10 @@
     padding: 0;
     box-sizing: border-box;
     position: relative;
+    color: white;
 }
 
 
-h1 {
-    color: #426696;
-    font-weight: 600;
-    font-size: 3rem;
-    opacity: 0.8;
-    border: 0 0 0 8px;
-    /*I'm ok*/
-}
 
 main {
     font-family: "Noto Sans JP", Consolas, "Courier New";
