--- a/main/index.html/style.css
+++ b/main/index.html/style.css
@@ -3,15 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     position: relative;
+    color: white;
 }
-
-
 h1 {
     color: #426696;
     font-weight: 600;
     font-size: 3rem;
-    opacity: 0.5;
-    border: 0 0 0 8px;
+    /*change this in order to improve its functionality.*/
 }
 
 main {
@@ -51,6 +49,8 @@ main {
     width: 20rem;
     position: absolute;
     border-radius: 50vh;
+    transition: .2s linear;
+    /*comment*/
 }
 
 .circle1 {
