--- a/main/index.html/style.css
+++ b/main/index.html/style.css
@@ -9,6 +9,7 @@ h1 {
     color: #426696;
     font-weight: 600;
     font-size: 3rem;
+    padding: 2%;
     /*change this in order to improve its functionality.*/
 }
 
